--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,20 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="col-md-9 col-md-offset-1"  ng-controller="HeaderCtrl">
+          <div class="alert alert-danger alert-dismissible" role="alert" ng-if="getError()">
+            <button type="button" class="close" data-dismiss="alert" ng-click="clearError()">
+              <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+            </button>
+            {{ getError() }}
+          </div>
+          <div class="alert alert-info alert-dismissible" role="alert" ng-if="getMessage()">
+            <button type="button" class="close" data-dismiss="alert" ng-click="clearMessage()">
+              <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+            </button>
+            {{ getMessage() }}
+          </div>
+        </div>
         <div class="col-md-9 col-md-offset-1" ng-view></div>
       </div>
     </div>
