--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-9 col-md-offset-1"  ng-controller="HeaderCtrl">
+          <div class="navbar navbar-static-top">
+            <div class="navbar-inner">
+              <a class="navbar-brand" href="#">Blueprint</a>
+              <a href="/logout"><button type="button" class="btn btn-primary navbar-btn pull-right">logout</button></a>
+            </div>
+          </div>
           <div class="alert alert-danger alert-dismissible" role="alert" ng-if="getError()">
             <button type="button" class="close" data-dismiss="alert" ng-click="clearError()">
               <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
