Add better read-only mode
Summary:
Make non-logged-in users able to use the UI in a read-only manner.
Make users explicitly log in to make schema changes.
Disable/remove inputs on schema list and schema creation (to support viewing schema suggestions).
Leave the schema editing page as-is because it's not linked to.
Login checking is done via a cookie since the server is performing access control.
Remove notes/suggestions on the schema creation page since they are unused.
Fix a bug in renamed outbound columns disappearing on schema update.
Redirect the root page over http to https in nginx.
Prevent saving when a column is partially added.

Test Plan: Tested UI and interactions locally logged in and logged out.

Reviewers: mperrone

Reviewed By: mperrone

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4281

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,10 @@
           <div class="navbar navbar-static-top">
             <div class="navbar-inner">
               <a class="navbar-brand" href="#">Blueprint</a>
+              <span ng-if="loginName" class="pull-right"><span class="navbar-text">Logged in as {{loginName}}</span>
               <a href="/logout"><button type="button" class="btn btn-primary navbar-btn pull-right">Logout</button></a>
+              </span>
+              <a href="/login" ng-if="!loginName"><button type="button" class="btn btn-primary navbar-btn pull-right">Login</button></a>
             </div>
           </div>
           <div class="alert alert-danger alert-dismissible" role="alert" ng-if="getError()">
@@ -44,6 +47,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-cookies.js"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
