--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-9 col-md-offset-1"  ng-controller="HeaderCtrl">
+        <div class="col-md-9 col-md-offset-1"  ng-controller="Header">
           <div class="navbar navbar-static-top">
             <div class="navbar-inner">
               <a class="navbar-brand" href="#">Blueprint</a>
@@ -52,6 +52,18 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-resource.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-cookies.js"></script>
-    <script src="/js/app.js"></script>
+
+    <script src="/js/app.module.js"></script>
+    <script src="/js/app.rest.js"></script>
+    <script src="/js/app.config.js"></script>
+
+    <script src="/js/column.js"></script>
+    <script src="/js/auth.js"></script>
+    <script src="/js/store.js"></script>
+
+    <script src="/js/header.js"></script>
+    <script src="/js/show.js"></script>
+    <script src="/js/list.js"></script>
+    <script src="/js/create.js"></script>
   </body>
 </html>
