Adding new analytics page
Summary: Adding a new analytics page for last 30 stats available at /#/stats

Test Plan: Tested locally and integration test.

Reviewers: dwe

Reviewed By: dwe

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D5064

--- a/static/index.html
+++ b/static/index.html
@@ -65,5 +65,6 @@
     <script src="/js/show.js"></script>
     <script src="/js/list.js"></script>
     <script src="/js/create.js"></script>
+    <script src="/js/stats.js"></script>
   </body>
 </html>
