--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,8 @@
           <div class="navbar navbar-static-top">
             <div class="navbar-inner">
               <a class="navbar-brand" href="#">Blueprint</a>
+              <span class="navbar-text" ng-if="currentEditor=='schema'">Editing Ace Schemas</span>
+              <span class="navbar-text" ng-if="currentEditor=='kinesisconfig'">Editing Kinesis Configs</span>
               <a href="/#/kinesisconfigs" ng-if="currentEditor!='kinesisconfig'" ng-click="updateEditor('kinesisconfig')"><button type="button" class="btn btn-primary navbar-btn pull-left">Edit Kinesis Configs</button></a>
               <a href="/#/schemas" ng-if="currentEditor!='schema'" ng-click="updateEditor('schema')"><button type="button" class="btn btn-primary navbar-btn pull-left">Edit Ace Schemas</button></a>
               <span ng-if="loginName" class="pull-right"><span class="navbar-text">Logged in as {{loginName}}</span>
