--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
             </button>
             {{ getMessage() }}
           </div>
-          <div class="alert alert-info" role="alert" ng-if="loginName && !isEditable">
+          <div class="alert alert-info" role="alert" ng-if="loginName && !globalIsEditable">
             Blueprint is currently in maintenance mode; no modifications are possible.
           </div>
         </div>
