Major refactor to support Angular unit tests
Using https://github.com/angular/angular-seed as a reference, this change brings all the required npm and bower configuration to install all the required dependencies for running Jasmine unit tests with Karma. It also implemented trivial unit tests for all modules. In particular, it brings the following changes:

- Instead of one single module, the code was refactored so each controller and service can have its own module and facilitate independent unit testing. This required updating dependencies to reflect whatever each module needed.
- Replaced both js/ and template/ with app/. In here, each module gets a separate folder which contains the js service/controller definition with its corresponding test and html template (if any).
- Implemented a trivial unit test for each modules which checks at least that the controller/service was instantiated correctly.
- Added the `run_angular_tests.sh` to the root of the project so we can trigger a single run of all Jasmine unit tests with Karma on Chrome. Dependencies should be installed automatically and only nodejs is required before running.
- No logic functionality should have been altered with this changes. The dependencies are still being downloaded from the index.html file without bower and only module definition changes was required to support the trivial unit tests. However, risk is carried because paths to resources and dependencies were updated.

--- a/static/index.html
+++ b/static/index.html
@@ -68,21 +68,21 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/ng-showdown/1.1.0/ng-showdown.min.js"></script>
 
 
-    <script src="/js/app.module.js"></script>
-    <script src="/js/app.rest.js"></script>
-    <script src="/js/app.config.js"></script>
+    <script src="/app/app.module.js"></script>
+    <script src="/app/app.config.js"></script>
 
-    <script src="/js/column.js"></script>
-    <script src="/js/auth.js"></script>
-    <script src="/js/store.js"></script>
+    <script src="/app/components/column/column.js"></script>
+    <script src="/app/components/rest/rest.js"></script>
+    <script src="/app/components/store/store.js"></script>
+    <script src="/app/components/auth/auth.js"></script>
 
-    <script src="/js/header.js"></script>
-    <script src="/js/schema/show.js"></script>
-    <script src="/js/schema/list.js"></script>
-    <script src="/js/schema/create.js"></script>
-    <script src="/js/kinesisconfig/show.js"></script>
-    <script src="/js/kinesisconfig/list.js"></script>
-    <script src="/js/kinesisconfig/create.js"></script>
-    <script src="/js/stats.js"></script>
+    <script src="/app/header.js"></script>
+    <script src="/app/schema/show/show.js"></script>
+    <script src="/app/schema/list/list.js"></script>
+    <script src="/app/schema/create/create.js"></script>
+    <script src="/app/kinesisconfig/show/show.js"></script>
+    <script src="/app/kinesisconfig/list/list.js"></script>
+    <script src="/app/kinesisconfig/create/create.js"></script>
+    <script src="/app/stats/stats.js"></script>
   </body>
 </html>
