--- a/static/app/schema/show/show.html
+++ b/static/app/schema/show/show.html
@@ -128,24 +128,25 @@
     </div>
   </div>
   <div class="form-group" style="margin-left: 10px; padding-right: 10px; width: 100%">
-    <div ng-if="!eventMetadata.tahoe_only.editable" style="display: inline-block; width: 20%">
-      <strong style="margin-right: 10px;">Load Into Tahoe Only</strong>
+    <div ng-if="!eventMetadata.datastores.editable" style="display: inline-block; width: 20%">
+      <strong style="margin-right: 10px;">Target Datastores</strong>
+      <!-- <div>{{eventMetadata.datastores.value.split(",").includes("tahoe") ? "Yay" : "Nan"}} -->
     </div>
-    <div ng-if="eventMetadata.tahoe_only.editable" style="display: inline-block; width: 20%; vertical-align: middle; margin-top:2px">
-      <strong style="margin-right: 10px;">Load Into Tahoe Only</strong>
+    <div ng-if="eventMetadata.datastores.editable" style="display: inline-block; width: 20%; vertical-align: middle; margin-top:2px">
+      <strong style="margin-right: 10px;">Target Datastores</strong>
     </div>
-    <div ng-if="!eventMetadata.tahoe_only.editable" style="margin-top: 7px; margin-bottom: 7px; display: inline-block">
-      {{eventMetadata.tahoe_only.value == "true" ? "Yes" : "No"}}
+    <div ng-if="!eventMetadata.datastores.editable" style="margin-top: 7px; margin-bottom: 7px; display: inline-block">
+      {{eventMetadata.datastores.displayedValue}}
     </div>
     <div style="display:inline-block; float: right">
-      <button class="btn btn-primary" ng-if="globalIsEditable && !eventMetadata.tahoe_only.editable" ng-click="editEventMetadata(eventMetadata.tahoe_only.metadataType)">Edit</button>
+      <button class="btn btn-primary" ng-if="globalIsEditable && !eventMetadata.datastores.editable" ng-click="editEventMetadata(eventMetadata.datastores.metadataType)">Edit</button>
     </div>
-    <div class="input-group-btn" ng-if="schemaIsEditable && globalIsEditable && eventMetadata.tahoe_only.editable" style="display: inline">
-      <label class="radio-inline" style="margin-top: 7px; margin-bottom: 7px"><input type="radio" name="edgeTypeRadio" ng-model="eventMetadata.tahoe_only.value" ng-disabled="!eventMetadata.tahoe_only.editable" value="true">Yes</label>
-      <label class="radio-inline" style="margin-top: 7px; margin-bottom: 7px"><input type="radio" name="edgeTypeRadio" ng-model="eventMetadata.tahoe_only.value" ng-disabled="!eventMetadata.tahoe_only.editable" value="false">No</label>
+    <div class="input-group-btn" ng-if="schemaIsEditable && globalIsEditable && eventMetadata.datastores.editable" style="display: inline">
+      <label class="radio-inline" style="margin-top: 7px; margin-bottom: 7px"><input type="checkbox" name="datastoresCheckbox" ng-model="eventMetadata.datastores.value.ace" ng-disabled="!eventMetadata.datastores.editable">Ace</label>
+      <label class="radio-inline" style="margin-top: 7px; margin-bottom: 7px"><input type="checkbox" name="datastoresCheckbox" ng-model="eventMetadata.datastores.value.tahoe" ng-disabled="!eventMetadata.datastores.editable">Tahoe</label>
       <div class="input-group" style="float: right">
-        <button class="btn btn-success" ng-if="schemaIsEditable && globalIsEditable &&eventMetadata.tahoe_only.editable" ng-click="updateEventMetadata(eventMetadata.tahoe_only.metadataType)" style="margin-right: 15px">Update</button>
-        <button class="btn btn-danger" ng-if="schemaIsEditable && globalIsEditable && eventMetadata.tahoe_only.editable" ng-click="cancelEditEventMetadata(eventMetadata.tahoe_only.metadataType)">Cancel</button>
+        <button class="btn btn-success" ng-if="schemaIsEditable && globalIsEditable &&eventMetadata.datastores.editable" ng-click="updateEventMetadata(eventMetadata.datastores.metadataType)" style="margin-right: 15px">Update</button>
+        <button class="btn btn-danger" ng-if="schemaIsEditable && globalIsEditable && eventMetadata.datastores.editable" ng-click="cancelEditEventMetadata(eventMetadata.datastores.metadataType)">Cancel</button>
       </div>
     </div>
   </div>
