Add Target Datastores to Blueprint
Summary:
- Add a label of Blueprint called Target Datastores
- Provide "Ace" and "Tahoe" as checkbox options (default Ace true, Tahoe false)
- Add "datastores" as an `EventMetadataType` in the backend

Test Plan:
- Build integration Blueprint
- See that the Target Datastore label on Blueprint shows up with "Ace" and "Tahoe" as options
- Test to see that there are no errors when viewing an event without a `datastores` metadata in the backend
- Test to see that an update is successful
- Test to see that two consecutive updates are successful
- Test to see that updating is successful when both "Ace" and "Tahoe" become unchecked

After deployment, remind everyone to run `ALTER TYPE event_metadata_type ADD VALUE 'datastores;` in integration Blueprint database

Reviewers: mperrone

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D5647

--- a/static/app/schema/show/show.html
+++ b/static/app/schema/show/show.html
@@ -141,8 +141,10 @@
       <button class="btn btn-primary" ng-if="globalIsEditable && !eventMetadata.datastores.editable" ng-click="editEventMetadata(eventMetadata.datastores.metadataType)">Edit</button>
     </div>
     <div class="input-group-btn" ng-if="schemaIsEditable && globalIsEditable && eventMetadata.datastores.editable" style="display: inline">
-      <label class="radio-inline" style="margin-top: 7px; margin-bottom: 7px"><input type="checkbox" name="datastoresCheckbox" ng-model="eventMetadata.datastores.value.ace" ng-disabled="!eventMetadata.datastores.editable">Ace</label>
-      <label class="radio-inline" style="margin-top: 7px; margin-bottom: 7px"><input type="checkbox" name="datastoresCheckbox" ng-model="eventMetadata.datastores.value.tahoe" ng-disabled="!eventMetadata.datastores.editable">Tahoe</label>
+      <label class="checkbox-inline" style="margin-top: 7px; margin-bottom: 7px">
+      <input type="checkbox" name="datastoresCheckbox" ng-model="eventMetadata.datastores.value.ace" ng-disabled="!eventMetadata.datastores.editable">Ace</label>
+      <label class="checkbox-inline" style="margin-top: 7px; margin-bottom: 7px">
+      <input type="checkbox" name="datastoresCheckbox" ng-class="checkbox" ng-model="eventMetadata.datastores.value.tahoe" ng-disabled="!eventMetadata.datastores.editable">Tahoe</label>
       <div class="input-group" style="float: right">
         <button class="btn btn-success" ng-if="schemaIsEditable && globalIsEditable &&eventMetadata.datastores.editable" ng-click="updateEventMetadata(eventMetadata.datastores.metadataType)" style="margin-right: 15px">Update</button>
         <button class="btn btn-danger" ng-if="schemaIsEditable && globalIsEditable && eventMetadata.datastores.editable" ng-click="cancelEditEventMetadata(eventMetadata.datastores.metadataType)">Cancel</button>
