Add Target Datastores to Blueprint
Summary:
- Add a label of Blueprint called Target Datastores
- Provide "Ace" and "Tahoe" as checkbox options (default Ace true, Tahoe false)
- Add "datastores" as an `EventMetadataType` in the backend

Test Plan:
- Build integration Blueprint
- See that the Target Datastore label on Blueprint shows up with "Ace" and "Tahoe" as options
- Test to see that there are no errors when viewing an event without a `datastores` metadata in the backend
- Test to see that an update is successful
- Test to see that two consecutive updates are successful
- Test to see that updating is successful when both "Ace" and "Tahoe" become unchecked

- Test to see that creating schemas with datastore choices is successful
- Test to see that creating schemas with all datastores deselected is successful

Before deployment, run the following in prod Blueprint db:

  - `ALTER TYPE event_metadata_type ADD VALUE 'datastores';`
  - `INSERT INTO event_metadata (event, metadata_type, metadata_value, user_name, version) SELECT DISTINCT(event), 'datastores'::event_metadata_type, 'ace', 'legacy', 1 FROM operation;`

After deployment, remind everyone to run the same two queries in their integration Blueprint db

Subscribers: jackgao, #scieng

Differential Revision: https://phabricator.internal.justin.tv/D5647

--- a/static/app/schema/create/create.html
+++ b/static/app/schema/create/create.html
@@ -1,8 +1,20 @@
 <div>
-  <form ng-submit="createSchema()" name="createSchemaForm">
-    <h1><a href="#/schemas">&#x21e6;</a> Create Schema for
-    <input ng-model="event.EventName" value="event.EventName"/></h1>
+  <h1><a href="#/schemas">&#x21e6;</a> Create Schema for
+  <input ng-model="event.EventName"/></h1>
 
+  <div style="margin-left: 10px; margin-top: 15px; width: 100%">
+      <div style="display: inline-block; width: 20%; vertical-align: middle; margin-top: 2px;">
+        <strong style="margin-right: 10px;">Target Datastores</strong>
+      </div>
+      <div class="input-group-btn" style="display: inline">
+        <label class="checkbox-inline" style="margin-top: 7px; margin-bottom: 7px">
+        <input type="checkbox" name="datastoresCheckbox" ng-class="checkbox" ng-model="datastores.ace">Ace</label>
+        <label class="checkbox-inline" style="margin-top: 7px; margin-bottom: 7px">
+        <input type="checkbox" name="datastoresCheckbox" ng-class="checkbox" ng-model="datastores.tahoe">Tahoe</label>
+      </div>
+  </div>
+
+  <form ng-submit="createSchema()" name="createSchemaForm">
     <table class="table table-hover">
       <thead>
         <tr>
