Add config to angular, add rollbar, trigger rollbar error on table has no datastores

--- a/static/index.html
+++ b/static/index.html
@@ -67,8 +67,11 @@
     <script src="//cdn.rawgit.com/showdownjs/showdown/1.6.4/dist/showdown.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ng-showdown/1.1.0/ng-showdown.min.js"></script>
 
+    <script src="/app/bower_components/ng-rollbar/ng-rollbar.min.js"></script>
+
 
     <script src="/app/app.module.js"></script>
+    <script src="/app/environment.js"></script>
     <script src="/app/app.config.js"></script>
 
     <script src="/app/components/column/column.js"></script>
